--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<h1>MINHA PÁGINA</h1>
-<p>Aula inicial sobre html</p>
+<h1>minha pagina</h1>
+<p>Aula inicial<strong></strong> sobre html</p>
+<p>qualquer coisa</p>
