--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <head>
         <meta charset="UTF-8">
         <title> Barbearia Alura</title>
+
+        <style>
+            p {
+                text-align: center;
+            }
+        </style>
 </head>
 <body>
     <h1 style=">Sobre a Barbearia Alura</h1>
