--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
     <h2>beneficios</h2>
     <ul>
-    <li>Atendimento aos clientes</li>
-<li>Espaço Diferenciado</li>
-<li>Localozação</li>
-<li>Proficionais Qualificados</li>
+        <li>Atendimento aos clientes</li>
+        <li class="itens">Espaço Diferenciado</li>
+        <li class="itens">Localozação</li>
+        <li class="itens">Proficionais Qualificados</li>
         
 
     </ul>
